# ML_Sys_Design_Project

./: .pre-commit-config.yaml  Baseline.ipynb  EDA.ipynb  MVP (1).ipynb  MVP.ipynb  README.md  dataset.txt  expanded_requests (1).csv  pyproject.toml  Проведение_EDA.md
docs/: Schema.puml  ml_system_design_doc.md
